# charwiki

./: .editorconfig  .env  .gitignore  Cargo.toml  LICENSE.md  README.md
migrations/: 20220615153258_create_articles_table.sql  20220624072958_create_path_index.sql  20220701090218_create_users_table.sql  20220701090830_create_sessions_table.sql
src/: api.rs  article.rs  auth.rs  main.rs  main_page.rs  prelude.rs  response.rs  sanitization.rs  syntax_highlighting.rs
src/frontend/: article.html  main_page.html
static/: styles.css
static/js/: brief-html.js  main.js
